<resources>
    <string name="app_name">Bissu</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_btn">Editar</string>
    <string name="edit_profile_title">Editar Usuario</string>
    <string name="edit_profile_option_form">Edit</string>

    <string name="mainpagerfragment_books">Books</string>
    <string name="mainpagerfragment_yours">Yours</string>
    <string name="mainpagerfragment_profile">Profile</string>
    <string name="booklistfragment_emptyview">No Books at this moment\nswipe to refresh</string>

    <string name="bookdetailfragment_title">Title</string>
    <string name="bookdetailfragment_author">Author</string>
    <string name="bookdetailfragment_editorial">Editorial</string>
    <string name="bookdetailfragment_pages">Pages</string>
    <string name="bookdetailfragment_category">Category</string>
    <string name="bookdetailfragment_description">Description</string>
    <string name="bookdetailsfragment_observations">Observations</string>
    <string name="observationitem_page">Page</string>
    <string name="menu_bookdetailfragment_observation">Observation</string>
    <string name="observationfragment_observation">Observation</string>
    <string name="observationfragment_submit">Submit</string>
    <string name="observation_adddescription">Add description</string>
    <string name="observationfragment_selectpage">Please, select a page</string>
    <string name="observationfragment_addobservation">Please, add the observation</string>
    <string name="observationfragment_processissue">We couldn\'t process the reques</string>
    <string name="observationfragment_cantcreateobservation">We couldn\'t create de observation</string>
    <string name="observationfragment_observationcreated">Observation created</string>

    <!-- Create book -->
    <string name="create_book_title">Create book</string>
    <string name="create_book_title_hint">Title</string>
    <string name="create_book_category_hint">Category</string>
    <string name="create_book_editorial_hint">Editorial</string>
    <string name="create_book_author_hint">Author</string>
    <string name="create_book_pages_hint">Pages</string>
    <string name="create_book_description_hint">Description</string>
    <string name="create_book_create_button">Create</string>



    <!-- Create observation-->
    <string name="create_observation_title">Create Observation</string>
    <string name="create_observation_pages_hint">Pages</string>
    <string name="create_observation_observation_hint">Observation</string>
    <string name="create_observation_create_button">Create</string>
    <string name="create_observation_pages_error">The pages is required</string>
    <string name="create_observation_observation_error">The observation is required</string>


    <!-- common -->
    <string name="agree">Agree</string>
    <string name="disagre">Disagre</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="not_registered">The user is not rgistered</string>
    <string name="connection_error">Please check your connection and try again.</string>
    <string name="defalult_error">Something is wrong, please wait a moment and try again</string>
    <!-- login -->
    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_create_account">CREATE ACCOUNT</string>
    <string name="login_forgot_password">FORGOT PASSWORD ?</string>
    <string name="login_username_error">The username is required</string>
    <string name="login_password_error">The password is required</string>
    <string name="login_error">The user or password is incorrect</string>

    <!-- create account -->
    <string name="create_account_title">Create account</string>
    <string name="create_account_username">Username</string>
    <string name="create_account_email">Email</string>
    <string name="create_account_first_name">First name</string>
    <string name="create_account_last_name">Last name</string>
    <string name="create_account_password">Password</string>
    <string name="create_account_picture">Take picture</string>
    <string name="create_account_button">Create account</string>
    <string name="create_account_repeat_password">Repeat password</string>
    <string name="create_account_username_error">The username is required</string>
    <string name="create_account_email_error">The email is required</string>
    <string name="create_account_name_error">The name is required</string>
    <string name="create_account_last_name_error">The last name is required</string>
    <string name="create_account_password_error">The password is required</string>
    <string name="create_account_repeat_password_error">The repeat password is required</string>
    <string name="create_account_validate_password_error">Passwords must be the same</string>

    <!--profile -->
    <string name="profile_update_profile">Update profile</string>
    <string name="profile_update_password">Update password</string>
    <string name="profile_log_out">LOGOUT</string>

    <!-- create account -->
    <string name="update_account_title">Update account</string>
    <string name="update_account_username">Username</string>
    <string name="update_account_email">Email</string>
    <string name="update_account_first_name">First name</string>
    <string name="update_account_last_name">Last name</string>
    <string name="update_account_picture">Take picture</string>
    <string name="update_account_button">Update account</string>
    <string name="update_account_username_error">The username is required</string>
    <string name="update_account_email_error">The email is required</string>
    <string name="update_account_name_error">The name is required</string>
    <string name="update_account_last_name_error">The last name is required</string>

    <!-- update password -->
    <string name="change_password_title">Update password</string>
    <string name="change_password_button">Update password</string>
    <string name="change_password_password">Password</string>
    <string name="change_password_repeat_password">Repeat password</string>
    <string name="change_password_password_error">The password is required</string>
    <string name="change_password_repeat_password_error">The repeat password is required</string>

</resources>
